fix responsive + overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,18 @@
+
+
+
+
 @import "tailwindcss";
 
 :root {
-  --background: #ffff;
+  --background: #ffffff;
   --foreground: #171717;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; /* 🔥 FIX VIDE À DROITE */
 }
 
 body {
@@ -11,6 +21,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* sécurise tous les éléments */
+* {
+  box-sizing: border-box;
+}
+
+/* option design */
 .clip-diagonal {
   clip-path: polygon(10% 0, 100% 0, 100% 100%, 0% 100%);
 }
